fix: Fix logo being overlapped by the description

--- a/css/main.css
+++ b/css/main.css
@@ -591,7 +591,7 @@ header .badges .badge{
 .reserve-coffee .inner{
   height: 400px;
 }
-.reserve-coffee .reserve-logo{
+.reserve-coffee .reserve-logo {
   position: absolute;
   top: 110px;
   left: 0;
@@ -599,11 +599,11 @@ header .badges .badge{
 .reserve-coffee .text-group{
   position: absolute;
   top: 124px;
-  left: 208;
+  left: 208px;
 
 }
 .reserve-coffee .product{
-  position:absolute;
+  position: absolute;
   top: 0;
   right: 0;
 }
